--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -40,6 +40,12 @@
             <div style="font-weight: bold;">
                 <p>Arbeitsort:</p>
             </div>
+            <div style="font-weight: bold;">
+                <p>Beruf:</p>
+            <div style="font-weight: bold;">
+                <p>Arbeitsumgebung</p>
+            </div>
+            </div>
         </ion-col>
         <ion-col>
             <div>
@@ -66,6 +72,12 @@
             <div>
                 <p>Zug</p>
             </div>
+            <div>
+                <p>Medizininformatiker</p>
+            </div>
+            <div>
+                <p>drinnen</p>
+            </div>
         </ion-col>
     </ion-row>
 
@@ -91,7 +103,7 @@
 
         <ion-row>
             <ion-col>
-                <p>40 / 100:</p>
+                <p>40 / 168</p>
             </ion-col>
         </ion-row>
 
@@ -106,6 +118,26 @@
                 <p>Amateur Stufe 1</p>
             </ion-col>
         </ion-row>
+        
+    </ion-row>
+    <ion-row>
+        <ion-col style="font-weight: bold;">
+            <p>Medikation:</p>
+        </ion-col>
+        <ion-col>
+            <p>Dafalgan</p>
+        </ion-col>
+    </ion-row>
+    <ion-row>
+        <ion-col style="font-weight: bold;">
+            <p>Dosierung:</p>
+        </ion-col>
+        <ion-col>
+            <p>nach Bedarf</p>
+        </ion-col>
+    </ion-row>
+    <ion-row>
+        <button>Profil bearbeiten</button>
     </ion-row>
 
 </ion-content>
