--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -42,9 +42,9 @@
             </div>
             <div style="font-weight: bold;">
                 <p>Beruf:</p>
+            </div>
             <div style="font-weight: bold;">
                 <p>Arbeitsumgebung</p>
-            </div>
             </div>
         </ion-col>
         <ion-col>
@@ -106,8 +106,46 @@
                 <p>40 / 168</p>
             </ion-col>
         </ion-row>
+    </ion-row>
+    <ion-row>
+        <ion-col>
+            <div style="font-weight: bold;">
+                <p>Nächstes Level:</p>
+            </div>
+            <div style="font-weight: bold;">
+                <p>Medikation:</p>
+            </div>
+            <div style="font-weight: bold;">
+                <p>Dosierung:</p>
+            </div>
+        </ion-col>
+        <ion-col>
+            <div>
+                <p>Amateur Stufe 1</p>
+            </div>
+            <div>
+                <p>Dafalgan</p>
+            </div>
+            <div>
+                <p>nach Bedarf</p>
+            </div>
+        </ion-col>
+    </ion-row>
 
-        <ion-row>
+        <ion-grid>
+            <ion-col text-center>
+                <button ion-button secondary icon-left style="height:36px;width:130px">
+                    <ion-icon name='editProfile'></ion-icon>Bearbeiten
+                </button>
+            </ion-col>
+        </ion-grid>
+
+
+
+
+
+
+        <!--ion-row>
             <ion-col style="font-weight: bold;">
                 <p>Nächstes Level:</p>
             </ion-col>
@@ -118,7 +156,7 @@
                 <p>Amateur Stufe 1</p>
             </ion-col>
         </ion-row>
-        
+
     </ion-row>
     <ion-row>
         <ion-col style="font-weight: bold;">
@@ -136,8 +174,12 @@
             <p>nach Bedarf</p>
         </ion-col>
     </ion-row>
-    <ion-row>
-        <button>Profil bearbeiten</button>
-    </ion-row>
+    <ion-grid>
+        <ion-col text-center>
+            <button ion-button secondary icon-left style="height:36px;width:130px">
+                <ion-icon name='editProfile'></ion-icon>Bearbeiten
+            </button>
+        </ion-col>
+    </ion-grid>
 
-</ion-content>
+</ion-content-->
