Medication in profile modified

--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -124,7 +124,7 @@
                 <p>Amateur Stufe 1</p>
             </div>
             <div>
-                <p>Dafalgan</p>
+                <p>Cetallerg 10 mg</p>
             </div>
             <div>
                 <p>nach Bedarf</p>
