--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -82,4 +82,6 @@
     <ion-toggle checked="true"></ion-toggle>
    </ion-item>
   </ion-item-group>
+  <h1>&nbsp;</h1>
+  <div text-center><button ion-button secondary style="height:36px;width:130px" text-center>Abmelden</button></div>
 </ion-content>
