Modify Allerg- and DrugPage

--- a/src/pages/introduction/allergy/allergy.html
+++ b/src/pages/introduction/allergy/allergy.html
@@ -72,6 +72,15 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+    <h1>&nbsp;</h1>
+      <h1>&nbsp;</h1>
+        <h1>&nbsp;</h1>
+          <h1>&nbsp;</h1>
+            <h1>&nbsp;</h1>
+              <h1>&nbsp;</h1>
+                <h1>&nbsp;</h1>
+                  <h1>&nbsp;</h1>
+                    <h1>&nbsp;</h1>
   <ion-select [(ngModel)]="questionKnownAllergy" multiple="true" [disabled]="isDisabled" style="font-size:1px">
     <ion-option>Ambrosia</ion-option>
     <ion-option>Ampfer</ion-option>
