--- a/src/pages/introduction/takingdrug/takingdrug.html
+++ b/src/pages/introduction/takingdrug/takingdrug.html
@@ -24,7 +24,7 @@ Hier kannst Du Deine Medikamente erfassen
         <button (click)="pushHomePage()" ion-button secondary icon-left style="height:36px;width:130px"><ion-icon name='close'></ion-icon>Abbrechen</button>
       </ion-col>
       <ion-col text-center>
-        <button ion-button icon-right secondary (click)="pushReminderTimePage()" style="height:36px;width:130px">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
+        <button ion-button icon-right secondary (click)="pushDrugPage()" style="height:36px;width:130px">Weiter<ion-icon name="ios-arrow-forward"></ion-icon></button>
       </ion-col>
     </ion-row>
   </ion-grid>
