ProfilPage, SettingsPage and IntroductionPage changed

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -20,11 +20,11 @@
     <ion-item-divider style="background-color:#550A21; color:white">Standorte</ion-item-divider>
       <ion-item>
         <ion-label style="font-size:15px; color:black">Wohnort</ion-label>
-        <ion-input style="font-size:15px" type="text" value="Zürich" disabled="true"></ion-input>
+        <ion-input style="font-size:15px" type="text" value="3000 Bern" disabled="true"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label style="font-size:15px; color:black">Arbeitsort</ion-label>
-        <ion-input style="font-size:15px" type="text" value="Zug" disabled="true"></ion-input>
+        <ion-input style="font-size:15px" type="text" value="3018 Bern-Bümpliz" disabled="true"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label style="font-size:15px; color:black">Standort 1</ion-label>
