--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar>
         <ion-title>
-            Profile
+            Profil
         </ion-title>
     </ion-navbar>
 </ion-header>
@@ -67,10 +67,10 @@
                 <p>männlich</p>
             </div>
             <div>
-                <p>Zürich</p>
+                <p>3000 Bern</p>
             </div>
             <div>
-                <p>Zug</p>
+                <p>3018 Bern-Bümpliz</p>
             </div>
             <div>
                 <p>Medizininformatiker</p>
@@ -103,7 +103,7 @@
 
         <ion-row>
             <ion-col>
-                <p>40 / 168</p>
+                <p>12 / 168</p>
             </ion-col>
         </ion-row>
     </ion-row>
@@ -113,21 +113,33 @@
                 <p>Nächstes Level:</p>
             </div>
             <div style="font-weight: bold;">
-                <p>Medikation:</p>
+                <p>Medikation 1:</p>
             </div>
             <div style="font-weight: bold;">
-                <p>Dosierung:</p>
+                <p>Dosierung 1:</p>
             </div>
+          <div style="font-weight: bold;">
+              <p>Medikation 2:</p>
+          </div>
+          <div style="font-weight: bold;">
+              <p>Dosierung 2:</p>
+          </div>
         </ion-col>
         <ion-col>
             <div>
                 <p>Amateur Stufe 1</p>
             </div>
             <div>
-                <p>Cetallerg 10 mg</p>
+                <p>CLARITINE-POLLEN </p>
             </div>
             <div>
-                <p>nach Bedarf</p>
+                <p>morgens</p>
+            </div>
+            <div>
+                <p>NASONEX Nasenspray </p>
+            </div>
+            <div>
+                <p>bei Bedarf</p>
             </div>
         </ion-col>
     </ion-row>
